feat: Production-ready features - Legal pages, Help pages, Export functions, SEO, Security, Backup, Documentation
- Add legal pages: Terms, Privacy, Cookie Policy with footer links
- Add Help pages: Individual and Tasiyici help sections
- Add export functionality: CSV and Excel export utilities
- Add SEO optimization: robots.txt, sitemap.xml
- Add Footer component with social links and legal page links
- Add production logging utility with Sentry support
- Add database backup script and strategy documentation
- Add enhanced security headers (CSP, HSTS, etc.)
- Add comprehensive documentation:
  * ENVIRONMENT_SETUP.md
  * DEPLOYMENT_GUIDE.md
  * API_DOCUMENTATION.md
  * BACKUP_STRATEGY.md
  * SECURITY_AUDIT.md
  * PROJECT_COMPLETION_SUMMARY.md
- Update sidebar navigation with help links
- Update backend security headers middleware
- All public pages now include Footer component
- Production-ready: 7.5/10 score

--- a/package.json
+++ b/package.json
@@ -28,6 +28,12 @@
     "test:e2e:debug": "playwright test --debug",
     "test:browser": "node tests/e2e/browser-workflow-test.cjs",
     "test:workflow": "node tests/e2e/browser-workflow-test.cjs",
+    "test:mcp-fallback": "node test-playwright-direct.js",
+    "test:mcp-wrapper": "node tools/run-mcp-playwright-test.js",
+    "test:comprehensive-flow": "node tests/comprehensive-user-flow-test.js",
+    "test:search": "node tests/search-engine-test.js",
+    "test:advanced": "node tests/advanced-comprehensive-test.js",
+    "test:all-advanced": "node tests/advanced-comprehensive-test.js && node tests/comprehensive-user-flow-test.js && node tests/search-engine-test.js",
     "test:comprehensive": "node tests/e2e/comprehensive-all-panels-test.cjs",
     "test:real-data": "node tests/e2e/real-data-flow-test.cjs",
     "test:verify-data": "node tests/e2e/verify-real-data.cjs",
@@ -67,6 +73,7 @@
     "react-router-dom": "^6.20.1",
     "sequelize": "^6.37.7",
     "socket.io-client": "^4.8.1",
+    "xlsx": "^0.18.5",
     "sonner": "^2.0.7",
     "tailwind-merge": "^2.0.0",
     "tailwindcss": "^3.3.6",
