chore: pin typescript for eslint compatibility

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "yolnet-kargo-platform",
+  "name": "yolnext-kargo-platform",
   "private": true,
   "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "dev:frontend": "vite",
-    "dev:backend": "cd backend && node postgres-backend.js",
+    "dev:backend": "cd backend && node server-modular.js",
     "dev:all": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
     "build": "vite build",
     "build:frontend": "tsc && vite build",
@@ -28,6 +28,7 @@
     "test:e2e:debug": "playwright test --debug",
     "test:browser": "node tests/e2e/browser-workflow-test.cjs",
     "test:workflow": "node tests/e2e/browser-workflow-test.cjs",
+    "test:admin-smoke": "node tests/e2e/admin-smoke-test.cjs",
     "test:mcp-fallback": "node tests/root-tests/test-playwright-direct.js",
     "test:mcp-wrapper": "node tools/run-mcp-playwright-test.js",
     "test:comprehensive-flow": "node tests/comprehensive-user-flow-test.js",
@@ -50,6 +51,7 @@
     "validate:prod": "node scripts/validate-production.js",
     "deploy:prod": "bash scripts/deploy-production.sh",
     "start:prod": "node scripts/start-production.js",
+    "setup:postgres": "node scripts/setup-postgresql.js",
     "fix:all": "node scripts/fix-all-issues.js",
     "test:live": "node --max-old-space-size=2048 tools/comprehensive-live-test.cjs",
     "test:live:safe": "node --max-old-space-size=1536 tools/comprehensive-live-test-safe.cjs",
@@ -69,9 +71,11 @@
     "clsx": "^2.0.0",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
-    "express": "^5.1.0",
+    "express": "^5.2.1",
     "helmet": "^7.2.0",
+    "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.294.0",
+    "node-fetch": "^3.3.2",
     "pg": "^8.16.3",
     "puppeteer": "^24.26.1",
     "react": "^18.2.0",
@@ -79,7 +83,6 @@
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
-    "react-query": "^3.39.3",
     "react-router-dom": "^6.20.1",
     "sequelize": "^6.37.7",
     "socket.io": "^4.8.1",
@@ -87,8 +90,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^2.0.0",
     "tailwindcss": "^3.3.6",
-    "tailwindcss-animate": "^1.0.7",
-    "xlsx": "^0.18.5"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.28.5",
@@ -115,6 +117,7 @@
     "autoprefixer": "^10.4.16",
     "axe-core": "^4.8.2",
     "babel-jest": "^29.7.0",
+    "baseline-browser-mapping": "^2.9.6",
     "concurrently": "^8.2.2",
     "eslint": "^8.53.0",
     "eslint-plugin-react": "^7.37.5",
@@ -129,7 +132,8 @@
     "rimraf": "^5.0.5",
     "supertest": "^7.1.4",
     "tailwindcss": "^3.3.6",
-    "typescript": "^5.2.2",
+    "ts-jest": "^29.4.6",
+    "typescript": "5.3.3",
     "vite": "^5.0.0",
     "vite-plugin-pwa": "^0.17.4",
     "vitest": "^1.6.1"
