feat(deployment): add Netlify and Render.com deployment configs
- Add netlify.toml for frontend deployment on Netlify
- Add render.yaml for backend and database deployment on Render.com
- Update API config to support Render.com backend URL
- Update env.example with deployment instructions
- Configure build commands, redirects, and headers for production

--- a/env.example
+++ b/env.example
@@ -1,6 +1,9 @@
 # YolNext Environment Configuration
 
 # API Configuration
+# Development: http://localhost:5000
+# Production (Render.com): https://yolnext-backend.onrender.com
+# Production (Netlify): Set this in Netlify dashboard -> Site settings -> Environment variables
 VITE_API_URL=http://localhost:5000
 VITE_API_TIMEOUT=10000
 VITE_API_RETRY_ATTEMPTS=3
@@ -17,22 +20,9 @@ DATABASE_PASSWORD=password
 JWT_SECRET=your-super-secret-jwt-key-here
 JWT_EXPIRES_IN=7d
 
-# Redis Configuration
-REDIS_URL=redis://localhost:6379
-REDIS_HOST=localhost
-REDIS_PORT=6379
-REDIS_PASSWORD=
-
-# Email Configuration
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USER=your-email@gmail.com
-SMTP_PASSWORD=your-app-password
-
-# SMS Configuration
-TWILIO_ACCOUNT_SID=your-twilio-account-sid
-TWILIO_AUTH_TOKEN=your-twilio-auth-token
-TWILIO_PHONE_NUMBER=+1234567890
+# Email Configuration (optional)
+EMAIL_SMTP_URL=smtp://user:pass@smtp.example.com:587
+EMAIL_FROM=no-reply@yolnext.com
 
 # Payment Gateway (Iyzico)
 IYZICO_API_KEY=your-iyzico-api-key
@@ -48,13 +38,8 @@ UPLOAD_PATH=./uploads
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
 
-# Security
-CORS_ORIGIN=http://localhost:5173
-HELMET_CSP_ENABLED=true
-
-# Monitoring
-LOG_LEVEL=info
-ENABLE_METRICS=true
+# Frontend Origin (for CORS)
+FRONTEND_ORIGIN=http://localhost:5173
 
 # Development
 NODE_ENV=development
