fix(deployment): fix render.yaml postgres type

--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@
 
 services:
   # PostgreSQL Database
-  - type: pspg
+  - type: postgres
     name: yolnext-database
     databaseName: yolnext
     user: yolnext_user
