--- a/netlify.toml
+++ b/netlify.toml
@@ -44,8 +44,7 @@
   [headers.values]
     Cache-Control = "public, max-age=31536000, immutable"
 
-# Plugin ayarları
-[plugins]
-  # Netlify Build Plugin (opsiyonel)
-  # package = "@netlify/plugin-nextjs"
+# Plugin ayarları (opsiyonel)
+# [[plugins]]
+#   package = "@netlify/plugin-nextjs"
 
