--- a/package.json
+++ b/package.json
@@ -32,10 +32,14 @@
     "deploy:logs": "docker-compose logs -f"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1"
+    "react-helmet-async": "^2.0.5",
+    "react-router-dom": "^6.20.1",
+    "tailwind-merge": "^2.6.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
@@ -46,6 +50,7 @@
     "postcss": "^8.4.32",
     "rimraf": "^5.0.5",
     "tailwindcss": "^3.3.6",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.3.3",
     "vite": "^5.0.0"
   }
