--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build:frontend": "tsc && vite build",
     "build:backend": "cd backend && npm run build",
     "build:all": "npm run build:frontend && npm run build:backend",
+    "test:build": "npm run build:frontend && echo Build başarılı!",
     "preview": "vite preview",
     "start": "npm run dev:all",
     "start:frontend": "npm run dev:frontend",
