Fix Railway deployment start command

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "build:all": "npm run build:frontend && npm run build:backend",
     "test:build": "npm run build:frontend && echo Build başarılı!",
     "preview": "vite preview",
-    "start": "npm run dev:all",
+    "start": "cd backend && node server-modular.js",
+    "start:dev": "npm run dev:all",
     "start:platform": "npm run dev:all",
     "start:frontend-only": "npm run dev:frontend",
     "start:backend-only": "npm run dev:backend",
