Remove all cd commands for Railway compatibility

--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "//": "=== PRODUCTION DEPLOYMENT ===",
     "dev": "vite",
     "dev:frontend": "vite",
-    "dev:backend": "cd backend && node server-modular.js",
+    "dev:backend": "node backend/server-modular.js",
     "dev:all": "npm run kill:ports && concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
     "kill:ports": "node scripts/kill-ports.js 5000 5173",
     "build": "vite build",
     "build:frontend": "vite build",
-    "build:backend": "cd backend && npm run build",
+    "build:backend": "echo 'Backend build skipped for production'",
     "build:all": "npm run build:frontend && npm run build:backend",
     "test:build": "npm run build:frontend && echo Build başarılı!",
     "preview": "vite preview",
@@ -24,12 +24,12 @@
     "start:backend-only": "npm run dev:backend",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --ext ts,tsx --fix",
-    "install:all": "npm install && cd backend && npm install",
+    "install:all": "npm install",
     "setup": "npm run install:all && npm run build:all",
     "clean": "rimraf dist node_modules/.vite",
-    "clean:all": "npm run clean && cd backend && npm run clean",
+    "clean:all": "npm run clean",
     "db:reset": "node backend/scripts/db-reset.js",
-    "migrate:prod": "cd backend && node scripts/migrate-production.js",
+    "migrate:prod": "node backend/scripts/migrate-production.js",
     "deploy": "bash scripts/deploy-production.sh",
     "setup-monitoring": "node backend/scripts/setup-monitoring.js",
     "deploy:docker": "docker-compose up -d --build",
