--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build:all": "npm run build:frontend && npm run build:backend",
     "test:build": "npm run build:frontend && echo Build başarılı!",
     "preview": "vite preview",
-    "start": "node server-modular.js",
+    "start": "node backend/server-modular.js",
     "start:dev": "npm run dev:all",
     "start:platform": "npm run dev:all",
     "start:frontend-only": "npm run dev:frontend",
