Add backend dependencies install to build process

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dev:all": "npm run kill:ports && concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
     "kill:ports": "node scripts/kill-ports.js 5000 5173",
     "build": "vite build",
+    "build": "npm install --prefix backend && vite build",
     "build:frontend": "vite build",
     "build:backend": "echo 'Backend build skipped for production'",
     "build:all": "npm run build:frontend && npm run build:backend",
@@ -24,7 +25,7 @@
     "start:backend-only": "npm run dev:backend",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --ext ts,tsx --fix",
-    "install:all": "npm install",
+    "install:all": "npm install && npm install --prefix backend",
     "setup": "npm run install:all && npm run build:all",
     "clean": "rimraf dist node_modules/.vite",
     "clean:all": "npm run clean",
