--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev:all": "npm run kill:ports && concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
     "kill:ports": "node scripts/kill-ports.js 5000 5173",
     "build": "vite build",
-    "build": "npm install --prefix backend && vite build",
+    "build": "vite build",
     "build:frontend": "vite build",
     "build:backend": "echo 'Backend build skipped for production'",
     "build:all": "npm run build:frontend && npm run build:backend",
@@ -45,7 +45,17 @@
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.20.1",
     "tailwind-merge": "^2.6.0",
-    "zod": "^3.25.76"
+    "zod": "^3.25.76",
+    "bcrypt": "^6.0.0",
+    "dotenv": "^17.2.3",
+    "express": "^4.21.2",
+    "express-rate-limit": "^8.2.1",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^7.0.10",
+    "pg": "^8.16.3",
+    "sqlite3": "^5.1.7",
+    "stripe": "^20.2.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.9.1",
