--- a/package.json
+++ b/package.json
@@ -12,29 +12,14 @@
     "dev:all": "npm run kill:ports && concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
     "kill:ports": "node scripts/kill-ports.js 5000 5173",
     "build": "vite build",
-    "build:frontend": "vite build",
-    "build:backend": "echo 'Backend build skipped for production'",
-    "build:all": "npm run build:frontend && npm run build:backend",
-    "test:build": "npm run build:frontend && echo Build başarılı!",
     "preview": "vite preview",
     "start": "node backend/server-modular.js",
-    "start:dev": "npm run dev:all",
-    "start:platform": "npm run dev:all",
-    "start:frontend-only": "npm run dev:frontend",
-    "start:backend-only": "npm run dev:backend",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --ext ts,tsx --fix",
     "install:all": "npm install && npm install --prefix backend",
     "setup": "npm run install:all && npm run build:all",
     "clean": "rimraf dist node_modules/.vite",
-    "clean:all": "npm run clean",
-    "db:reset": "node backend/scripts/db-reset.js",
-    "migrate:prod": "node backend/scripts/migrate-production.js",
-    "deploy": "bash scripts/deploy-production.sh",
-    "setup-monitoring": "node backend/scripts/setup-monitoring.js",
-    "deploy:docker": "docker-compose up -d --build",
-    "deploy:stop": "docker-compose down",
-    "deploy:logs": "docker-compose logs -f"
+    "db:reset": "node backend/scripts/db-reset.js"
   },
   "dependencies": {
     "clsx": "^2.1.1",
@@ -53,7 +38,6 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^7.0.10",
     "pg": "^8.16.3",
-    "sqlite3": "^5.1.7",
     "stripe": "^20.2.0"
   },
   "devDependencies": {
