UPDATE: render.yaml - Update FRONTEND_ORIGIN placeholder

--- a/render.yaml
+++ b/render.yaml
@@ -27,9 +27,9 @@ services:
           name: yolnext-database
           property: connectionString
       - key: JWT_SECRET
-        generateValue: true  # Render otomatik generate eder
+        generateValue: true  # Render otomatik generate eder (güvenli random secret)
       - key: FRONTEND_ORIGIN
-        value: https://imaginative-lokum-aff632.netlify.app
+        value: https://yolnext.vercel.app  # Frontend URL'inizi buraya ekleyin (Vercel/Netlify)
       - key: DB_POOL_MAX
         value: "20"
       - key: DB_IDLE_TIMEOUT
