FIX: Prevent 'Unexpected token <' JSON errors in ALL nakliyeci pages - add safeJsonParse utility and replace all .json() calls

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dev:all": "npm run kill:ports && concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
     "kill:ports": "node scripts/kill-ports.js 5000 5173",
     "build": "vite build",
-    "preview": "vite preview",
+    "preview": "vite preview", 
+    "start:platform": "npm run dev:all",
     "start": "node backend/server-modular.js",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --ext ts,tsx --fix",
