--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-﻿# Dependencies
+# Dependencies
 node_modules/
 dist/
 coverage/
@@ -62,6 +62,11 @@ testsprite_tests/
 .env.*.local
 *.env
 !.env.example
+
+# Local env files used by this repo (not prefixed with dot)
+env.local
+env.development
+env.production
 
 # Sensitive data
 backend-data.json
